--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -6,7 +6,7 @@
         <title>FoLiA Linguistic Annotation Tool</title>
         <script type="text/javascript" src="/style/jquery-2.1.3.min.js"></script>
         <script type="text/javascript" src="/style/jquery-ui.min.js"></script>
-        {% if namespace == "testflat" %}
+        {% if namespace == "testflat" and docid != "manual" %}
             <link rel="StyleSheet" href="/style/qunit-1.17.1.css" type="text/css" />
             <script type="text/javascript" src="/style/qunit-1.17.1.js"></script>
             <script type="text/javascript" src="/style/testflat.js"></script>
