Search & highlight functionality works

--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -73,6 +73,10 @@ div.focustype span.lbl {
 div.undofocustype span.lbl {
     background: transparent;
 }
+div.highlighted span.lbl {
+    background: yellow;
+    border: purple 1px dashed;
+}
 
 div.class1 span.lbl, div#class1legend {
     background: #b4e0aa; /*green*/
