more shuffling around

--- a/flat/modes/structureeditor/templates/structureeditor.html
+++ b/flat/modes/structureeditor/templates/structureeditor.html
@@ -9,6 +9,10 @@
 {% endblock %}
 
 {% block dialogs %}
+<div id="leftpane">
+    <div id="perspective"></div>
+    <div id="textclassselector"></div>
+</div>
 <div id="editor">
     <div id="editorheader">
         <span>Structure Editor</span>
