--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -34,6 +34,15 @@ span.ab span.su{
 span.ab span.dependency {
     color: #854587;
 }
+span.str {
+    border-bottom: 1px #696487 solid;
+}
+span.correction {
+    border-bottom: 1px #ff0000 solid;
+}
+span.str:hover {
+    border: 1px #2400ff dashed;
+}
 span.dependency span.headtext {
     font-style: italic;
 }
