visualization of suggestions for insertion

--- a/flat/modes/viewer/templates/viewertoolsandoptions.html
+++ b/flat/modes/viewer/templates/viewertoolsandoptions.html
@@ -1,4 +1,4 @@
     <li id="opensearch"><a href="javascript:opensearch()">Search</a></li>
     <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
     <li id="toggleoriginal"><a href="javascript:toggleoriginal()">Show text prior to correction</a></li>
-    <li id="toggledeletions"><a href="javascript:toggledeletions()">Show deletions</a></li>
+    <li id="toggledeletions"><a href="javascript:toggledeletions()">Show deletions &amp; suggested insertions</a></li>
