--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -280,3 +280,19 @@ div#search button {
     font-size: 80%;
     font-style: italic;
 }
+#info .specialdeleted {
+    display: block;
+    text-align: center;
+    width: 100%;
+    color: red;
+    font-weight: bold;
+    font-size: 110%;
+}
+#info .specialinsertion {
+    display: block;
+    text-align: center;
+    width: 100%;
+    color: blue;
+    font-weight: bold;
+    font-size: 110%;
+}
