Attempted fix for issue #7: new annotations not coloured after 7 types are used.

--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -108,6 +108,9 @@ div.class6 span.lbl, div#class6legend {
 div.class7 span.lbl, div#class7legend {
     background: #e1c398; /*orange*/
 }
+div.classother span.lbl, div#classotherlegend {
+    background: #ccc; /*gray*/
+}
 div.hover span.lbl, div.hover>span.ab {
     background: #b9d8d9;
 }
