--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -72,7 +72,7 @@ initialcorrectionset = '{{ initialcorrectionset }}';
         <div id="openinconsolecontainer">
             <input id="openinconsole" type="checkbox" /> Delegate to console
         </div>
-        <button id="editorsubmit">Ok</button>
+        <button id="editorsubmit">Submit</button>
     </div>
 </div>
 <div id="newdeclaration" class="dialog">
