adding elements in edit window in preperation for multiple annotation support (issue #28)

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -71,7 +71,9 @@ initialcorrectionset = '{{ initialcorrectionset }}';
     <div class="buttoncontainer">
         <div id="openinconsolecontainer">
             <input id="openinconsole" type="checkbox" /> Delegate to console
+            <input id="spanmultiannot" type="checkbox" /> Consider adjacent repeat annotations as spans
         </div>
+        <button id="editormultiannot">Repeat annotation &gt;</button>
         <button id="editorsubmit">Submit</button>
     </div>
 </div>
