implemented multiple target annotation in interface (submission still needs to be done)

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -73,8 +73,8 @@ initialcorrectionset = '{{ initialcorrectionset }}';
             <input id="openinconsole" type="checkbox" /> Delegate to console
             <input id="spanmultiannot" type="checkbox" /> Consider adjacent repeat annotations as spans
         </div>
-        <button id="editormultiannot">Repeat annotation &gt;</button>
-        <button id="editorsubmit">Submit</button>
+        <button id="multiselector">Repeat annotation &gt;</button>
+        <br /><button id="editorsubmit">Submit</button>
     </div>
 </div>
 <div id="newdeclaration" class="dialog">
