finished implementation of queue functionality (part of issue #28)

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -112,7 +112,7 @@ initialcorrectionset = '{{ initialcorrectionset }}';
 </div>
 {% include "search.html" %}
 <div id="connectioninfo"></div>
-<div id="queue">
+<div id="queueinfo">
     <button id="submitqueue" title="Submit all queued annotations">Submit queue</button>
 </div>
 <div id="saveversion">
