--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -202,3 +202,7 @@ div#queueinfo {
     top: 75px;
     background: transparent;
 }
+span.repeatnotice {
+    color: yellow;
+    font-size: 80%;
+}
