Implementing right-to-left support (issue #2)

--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -43,6 +43,11 @@
             {% if slices %}
             slices = {{ slices|safe }};
             {% endif %}
+            {% if rtl %}
+            rtl = true;
+            {% else %}
+            rtl = false;
+            {% endif %}
             {% block js %}
             {% endblock js %}
         </script>
