Setting the initial correction set

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block js %}
-initialcorrectionset = '{{ initialcorrectionset }}';
+initialcorrectionset = {{ initialcorrectionset|safe }};
 {% endblock %}
 
 {% block menu %}
