--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -35,6 +35,9 @@ initialcorrectionset = '{{ initialcorrectionset }}';
 <li>Tools &amp; Options
 <ul id="toolsandoptions">
     {% include "viewertoolsandoptions.html" %}
+    {% if configuration.allowconfidence %}
+    <li id="toggleeditconfidence"><a href="javascript:toggleeditconfidence()">Show confidence editing elements</a></li>
+    {% endif %}
     {% if configuration.allowdeclare %}
     <li><a href="javascript:declare()">Add new Annotation Type</a></li>
     {% endif %}
