--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -4,13 +4,14 @@
         <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8"/>
         <meta name="author" content="Maarten van Gompel" />
         <title>FoLiA Linguistic Annotation Tool</title>
-        <script type="text/javascript" src="/style/jquery-2.1.3.min.js"></script>
+        <script type="text/javascript" src="/style/jquery-3.1.0.min.js"></script>
         <script type="text/javascript" src="/style/jquery-ui.min.js"></script>
         {% if namespace == "testflat" and docid != "manual" %}
             <link rel="StyleSheet" href="/style/qunit-1.17.1.css" type="text/css" />
             <script type="text/javascript" src="/style/qunit-1.17.1.js"></script>
             <script type="text/javascript" src="/style/testflat.js"></script>
         {% endif %}
+        <link rel="StyleSheet" href="/style/jquery-ui.min.css" type="text/css" />
         <link rel="StyleSheet" href="/style/flat.css" type="text/css" />
         <script type="text/javascript" src="/style/flat.js"></script> 
         {% block head %}
