changed hover colors to stand out more

--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -125,6 +125,7 @@ div#editor .addhigherordermenu {
 
 div.selected span.lbl {
     background: yellow;
+    color: black;
 }
 #editor button.spanselector {
     background: #444;
