--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -187,7 +187,7 @@ div#info .confidence {
 }
 div#info .higherorder {
     font-style: italic;
-    color: #21006d;
+    color: #6d0000;
 }
 div#infoheader {
 
