--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -171,7 +171,10 @@ div#info td {
 }
 div#info .class {
     font-style: italic;
-    color: #31355a;
+    color: #3323cd;
+}
+div #info .text {
+    color: #333;
 }
 div#info .annotator {
     font-style: italic;
