--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -70,7 +70,12 @@ div#editor .buttoncontainer span {
     padding-left: 10px;
     padding-right: 10px;
 }
-
+div#editor input.textedit, div#editor select.textedit {
+    color: #333;
+}
+div#editor input.classedit, div#editor select.classedit {
+    color: #3323cd;
+}
 input.changed {
     color: #660000;
 }
