added feedback notices

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -121,6 +121,8 @@ initialcorrectionset = '{{ initialcorrectionset }}';
 <div id="saveversion">
 <label>Version label:</label> <input id="versionlabel" title="A label to quickly identify this version" /><button id="savebutton" title="Explicitly save the current state of the document, using the specified version label (if any), this enables you to go back to this version later. Note that explicit saving is not required, all changes will be retained automatically. Make sure to submit any queued actions prior to this.">Save</button>
 </div>
+<div id="notice">
+</div>
 {% endblock %}
 
 {% block main %}
