--- a/flat/templates/login.html
+++ b/flat/templates/login.html
@@ -22,7 +22,7 @@
     <div class="buttoncontainer">
         <input class="button" type="submit" value="Log in" />
         <span class="helptext">
-            (no account yet? <a href="/register/">Register here</a>)
+            (no account yet? <a href="/register/">Register here</a> | <a href="/account/password_reset/">Forgot password?</a>)
         </span>
     </div>
     {% csrf_token %}
