added IDs for converters + added front end code for input conversion (issue #62)

--- a/flat/style/flat.css
+++ b/flat/style/flat.css
@@ -312,4 +312,6 @@ div#leftpane .title {
 #perspectivemenu {
     max-width: 160px;
 }
-
+#convparameterhelp, #convparameters {
+   display: none;
+}
