added front-end element for file management (issue #54)

--- a/flat/style/flat.css
+++ b/flat/style/flat.css
@@ -315,3 +315,7 @@ div#leftpane .title {
 #convparameterhelp, #convparameters {
    display: none;
 }
+#filemanagement {
+    font-size: 80%;
+    margin-left: 30px;
+}
